# openGL

./: .gitignore  CMakeLists.txt  README.md  main  main.cxx
cube/: CMakeLists.txt  main.cxx
ext/gl_functions/: CMakeLists.txt
ext/gl_functions/include/: functions.hxx
ext/gl_functions/src/: functions.cxx
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
helloTriangle/: CMakeLists.txt  main.cxx
lib/: CMakeLists.txt  camera.cpp  camera.hpp  model.cpp  model.hpp
plato_solids/: CMakeLists.txt  hexahedron.cxx  octahedron.cxx  tetrahedron.cxx
rectangle/: CMakeLists.txt  main.cxx
reg_polygon/: CMakeLists.txt  main.cxx
shaders/: CMakeLists.txt  main.cxx
shaders/shaders/: simple.frag  simple.vert
snake/: CMakeLists.txt  main.cxx
snake/include/: glfw_system.hxx  snake.hxx  window.hxx
snake/src/: glfw_system.cxx  window.cxx
space/: CMakeLists.txt  main.cpp
space/shaders/: simple.frag  simple.vert
